profilelist1exp/unpackaged/objects/NPS_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account_Relationship__c</fullName>
        <label>Account Relationship</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPS Data</relationshipLabel>
        <relationshipName>NPS_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NPS Data</relationshipLabel>
        <relationshipName>NPS_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Likelihood to Recommend</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPS Data</relationshipLabel>
        <relationshipName>NPS_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_s_Influence_Level__c</fullName>
        <label>Contact’s Influence Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Role__c</fullName>
        <formula>IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Power Sponsor / Decision Maker&quot; ), &quot;Power Sponsor / Decision Maker; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Sponsor/ Champion&quot; ), &quot;Sponsor/ Champion; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Influencer&quot; ), &quot;Influencer; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Business User&quot; ), &quot;Business User; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Evaluator&quot; ), &quot;Evaluator; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Purchasing / Procurement&quot; ), &quot;Purchasing / Procurement; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Financial Buyer&quot; ), &quot;Financial Buyer; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Technical Buyer&quot; ), &quot;Technical Buyer; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Operational Buyer&quot; ), &quot;Operational Buyer; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Legal Approver&quot; ), &quot;Legal Approver; &quot;,null ) &amp;
IF ( ISPICKVAL( Contact__r.Decision_Making_Role__c , &quot;Unknown&quot; ), &quot;Unknown; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Making Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Software__c</fullName>
        <label>Dell Software</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enterprise_Products__c</fullName>
        <label>Enterprise Products</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Category__c</fullName>
        <label>NPS Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                    <color>#3333FF</color>
                    <label>Promoter</label>
                </value>
                <value>
                    <fullName>Passive</fullName>
                    <color>#F3D904</color>
                    <label>Passive</label>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                    <color>#FF0000</color>
                    <label>Detractor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Name__c</fullName>
        <externalId>true</externalId>
        <label>SatMetrix ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Thing_To_Improve__c</fullName>
        <label>One Thing To Improve</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Online__c</fullName>
        <label>Online</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Management__c</fullName>
        <label>Order Management</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peripherals__c</fullName>
        <label>Peripherals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Client Products</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Process__c</fullName>
        <label>Sales Process</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Support</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NPS Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NPS Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>